# ChatbotTripC

./: .dockerignore  API_UPDATES_JANUARY_2025.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  KEYWORD_ANALYZER_IMPLEMENTATION.md  LANGUAGE_ENRICHMENT_LOGIC.md  NEW_ENDPOINTS_USAGE.md  README.md  README_DOCKER.md  SERVICE_AGENT_LLM_UPGRADE.md  SESSION_MANAGEMENT_FIX.md  all_product_types.json  api_documentation.md  debug_search_criteria.py  debug_tripc_api.py  demo.py  demo_keyword_analyzer.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env_example.txt  final_suggestion_test.py  init-db.sql  nginx.conf  pyproject.toml  requirements.txt  test_api.py  test_architecture_suggestions.py  test_auto_cancel.py  test_booking_fix.py  test_both_product_types.py  test_confirmation.py  test_culinary_prompt.py  test_culinary_suggestion.py  test_debug_confirmation.py  test_documentation.py  test_email_regex.py  test_human_like.py  test_intent_reasoning.py  test_keyword_analyzer.py  (+16 more)
langgraph_docs/: workflow_diagram.dot  workflow_diagram.md  workflow_summary.json
src/app/: __init__.py  main.py
src/app/agents/: __init__.py  ai_orchestrator.py  booking_agent.py  qna_agent.py  service_agent.py
src/app/core/: __init__.py  conversation_memory.py  cta_engine.py  error_handling.py  langgraph_workflow.py  platform_context.py  prompt_manager.py  prompts.md
src/app/database/: __init__.py  postgresql.py
src/app/llm/: __init__.py  open_client.py  qwen_client.py  rate_limited_client.py
src/app/models/: __init__.py  platform_models.py  schemas.py
src/app/services/: __init__.py  email_service.py  keyword_analyzer.py  tripc_api.py
src/app/vector/: __init__.py  pgvector_store.py
src/tests/: test_main.py  test_tourist_flows.py
